--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ title: Akhtar, CV & ML
     <h2>Selected Publications</h2>
     <ul style="font-family: 'Georgia', serif; font-size: 17px; line-height: 1.8; color: #2c3e50; padding-left: 0; list-style-type: none;">
         <li style="margin-bottom: 20px;">
-            <p><b style="color: #1f78b4;">Muhammad Akhtar Munir*</b>, Muhamad Sohail Danish*, Syed Roshaan Ali Shah, Kartik Kuckreja, Fahad Shahbaz Khan, Paolo Fraccaro, Alexandre Lacoste, and Salman Khan.<br>
+            <p><b style="color: #1f78b4;">Muhammad Akhtar Munir</b>*, Muhamad Sohail Danish*, Syed Roshaan Ali Shah, Kartik Kuckreja, Fahad Shahbaz Khan, Paolo Fraccaro, Alexandre Lacoste, and Salman Khan.<br>
                <strong>"GEOBench-VLM: Benchmarking Vision-Language Models for Geospatial Tasks"</strong>. 
                In <strong>arXiv (2024)</strong>. <i>*Equally contributing first authors.</i><br>
                <a href="https://arxiv.org/pdf/2411.19325" style="text-decoration: none; color: #3498db;">[Paper]</a> 
