--- a/index.html
+++ b/index.html
@@ -49,13 +49,24 @@ title: Akhtar, CV & ML
     <a id="publications" class="anchor"></a>
     <h2>Selected Publications</h2>
     <ul style="font-family: 'Georgia', serif; font-size: 17px; line-height: 1.8; color: #2c3e50; padding-left: 0; list-style-type: none;">
-        <li style="margin-bottom: 20px;">
+<!--         <li style="margin-bottom: 20px;">
             <p><b style="color: #1f78b4;">Muhammad Akhtar Munir</b>*, Muhamad Sohail Danish*, Syed Roshaan Ali Shah, Kartik Kuckreja, Fahad Shahbaz Khan, Paolo Fraccaro, Alexandre Lacoste, and Salman Khan.<br>
                <strong>"GEOBench-VLM: Benchmarking Vision-Language Models for Geospatial Tasks"</strong>. 
                In <strong>arXiv (2024)</strong>. <i>*Equally contributing first authors.</i><br>
                <a href="https://arxiv.org/pdf/2411.19325" style="text-decoration: none; color: #3498db;">[Paper]</a> 
                <a href="https://github.com/The-AI-Alliance/GEO-Bench-VLM" style="text-decoration: none; color: #e74c3c;">[Code]</a>
             </p>
+        </li> -->
+        <li style="display: flex; align-items: flex-start; margin-bottom: 20px;">
+        <img src="thumbnail-placeholder.jpg" alt="GEOBench-VLM Thumbnail" style="width: 120px; height: 120px; object-fit: cover; margin-right: 15px;">
+        <div>
+            <p><b style="color: #1f78b4;">Muhammad Akhtar Munir</b>*, Muhamad Sohail Danish*, Syed Roshaan Ali Shah, Kartik Kuckreja, Fahad Shahbaz Khan, Paolo Fraccaro, Alexandre Lacoste, and Salman Khan.<br>
+               <strong>"GEOBench-VLM: Benchmarking Vision-Language Models for Geospatial Tasks"</strong>. 
+               In <strong>arXiv (2024)</strong>. <i>*Equally contributing first authors.</i><br>
+               <a href="https://arxiv.org/pdf/2411.19325" style="text-decoration: none; color: #3498db;">[Paper]</a> 
+               <a href="https://github.com/The-AI-Alliance/GEO-Bench-VLM" style="text-decoration: none; color: #e74c3c;">[Code]</a>
+            </p>
+        </div>
         </li>
         <li style="margin-bottom: 20px;">
             <p>Sagar Soni, Akshay Dudhane, Hiyam Debary, Mustansar Fiaz, <b style="color: #1f78b4;">Muhammad Akhtar Munir</b>, Muhammad Sohail Danish, Paolo Fraccaro, Campbell D Watson, Levente J Klein, Fahad Shahbaz Khan, Salman Khan.<br>
