--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ title: Akhtar, CV & ML
             </p>
         </li> -->
         <li style="display: flex; align-items: flex-start; margin-bottom: 20px;">
-        <img src="thumbnail-placeholder.jpg" alt="GEOBench-VLM Thumbnail" style="width: 120px; height: 120px; object-fit: cover; margin-right: 15px;">
+        <img src="thumbnail_geobench.png" alt="GEOBench-VLM Thumbnail" style="width: 120px; height: 120px; object-fit: cover; margin-right: 15px;">
         <div>
             <p><b style="color: #1f78b4;">Muhammad Akhtar Munir</b>*, Muhamad Sohail Danish*, Syed Roshaan Ali Shah, Kartik Kuckreja, Fahad Shahbaz Khan, Paolo Fraccaro, Alexandre Lacoste, and Salman Khan.<br>
                <strong>"GEOBench-VLM: Benchmarking Vision-Language Models for Geospatial Tasks"</strong>. 
