--- a/index.html
+++ b/index.html
@@ -57,9 +57,14 @@ title: Akhtar, CV & ML
                <a href="https://github.com/The-AI-Alliance/GEO-Bench-VLM" style="text-decoration: none; color: #e74c3c;">[Code]</a>
             </p>
         </li> -->
-        <li style="display: flex; align-items: flex-start; margin-bottom: 20px;">
-        <img src="thumbnail_geobench.png" alt="GEOBench-VLM Thumbnail" style="width: 120px; height: 120px; object-fit: cover; margin-right: 15px;">
-        <div>
+        <li style="display: flex; align-items: flex-start; margin-bottom: 30px;">
+        <!-- Thumbnail -->
+        <div style="flex: 0 0 150px; margin-right: 20px;">
+            <img src="thumbnail_geobench.png" alt="GEOBench-VLM Thumbnail" style="width: 100%; height: auto; border-radius: 8px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);">
+        </div>
+
+        <!-- Publication Details -->
+        <div style="flex: 1;">
             <p><b style="color: #1f78b4;">Muhammad Akhtar Munir</b>*, Muhamad Sohail Danish*, Syed Roshaan Ali Shah, Kartik Kuckreja, Fahad Shahbaz Khan, Paolo Fraccaro, Alexandre Lacoste, and Salman Khan.<br>
                <strong>"GEOBench-VLM: Benchmarking Vision-Language Models for Geospatial Tasks"</strong>. 
                In <strong>arXiv (2024)</strong>. <i>*Equally contributing first authors.</i><br>
