--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ title: Akhtar, CV & ML
         <li style="display: flex; align-items: flex-start; margin-bottom: 30px;">
         <!-- Thumbnail -->
         <div style="flex: 0 0 150px; margin-right: 20px;">
-            <img src="thumbnail_geobench.png" alt="GEOBench-VLM Thumbnail" style="width: 100%; height: auto; border-radius: 8px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);">
+            <img src="thumb_geo.png" alt="GEOBench-VLM Thumbnail" style="width: 100%; height: auto; border-radius: 8px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);">
         </div>
 
         <!-- Publication Details -->
