--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ title: Akhtar, CV & ML
         <!-- Publication Item 3 -->
         <li style="display: flex; align-items: flex-start; margin-bottom: 30px;">
             <div style="flex: 0 0 150px; margin-right: 20px;">
-                <img src="thumbnail-placeholder.jpg" alt="Weather Forecasting Thumbnail" style="width: 100%; height: auto; border-radius: 8px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);">
+                <img src="thumb_weather.png" alt="Weather Forecasting Thumbnail" style="width: 100%; height: auto; border-radius: 8px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);">
             </div>
             <div style="flex: 1;">
                 <p><b style="color: #1f78b4;">Muhammad Akhtar Munir</b>, Fahad Shahbaz Khan, and Salman Khan.<br>
