--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ title: Akhtar, CV & ML
         <!-- Publication Item 3 -->
         <li style="display: flex; align-items: flex-start; margin-bottom: 30px;">
             <div style="flex: 0 0 150px; margin-right: 20px;">
-                <img src="thumb_weather.png" alt="Weather Forecasting Thumbnail" style="width: 100%; height: auto; border-radius: 8px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);">
+                <img src="thumb_weather_.png" alt="Weather Forecasting Thumbnail" style="width: 100%; height: auto; border-radius: 8px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);">
             </div>
             <div style="flex: 1;">
                 <p><b style="color: #1f78b4;">Muhammad Akhtar Munir</b>, Fahad Shahbaz Khan, and Salman Khan.<br>
@@ -105,7 +105,7 @@ title: Akhtar, CV & ML
         <!-- Publication Item 4 -->
         <li style="display: flex; align-items: flex-start; margin-bottom: 30px;">
             <div style="flex: 0 0 150px; margin-right: 20px;">
-                <img src="thumbnail-placeholder.jpg" alt="Diversification and Alignment Thumbnail" style="width: 100%; height: auto; border-radius: 8px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);">
+                <img src="thumb_diversify.png" alt="Diversification and Alignment Thumbnail" style="width: 100%; height: auto; border-radius: 8px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);">
             </div>
             <div style="flex: 1;">
                 <p>Sohail Danish, Muhammad Haris Khan, <b style="color: #1f78b4;">Muhammad Akhtar Munir</b>, Saquib Sarfraz, and Mohsen Ali.<br>
@@ -119,7 +119,7 @@ title: Akhtar, CV & ML
         <!-- Publication Item 5 -->
         <li style="display: flex; align-items: flex-start; margin-bottom: 30px;">
             <div style="flex: 0 0 150px; margin-right: 20px;">
-                <img src="thumbnail-placeholder.jpg" alt="Cal-DETR Thumbnail" style="width: 100%; height: auto; border-radius: 8px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);">
+                <img src="thumb_caldetr.png" alt="Cal-DETR Thumbnail" style="width: 100%; height: auto; border-radius: 8px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);">
             </div>
             <div style="flex: 1;">
                 <p><b style="color: #1f78b4;">Muhammad Akhtar Munir</b>, Salman Khan, Muhammad Haris Khan, Mohsen Ali, and Fahad Shahbaz Khan.<br>
@@ -134,7 +134,7 @@ title: Akhtar, CV & ML
         <!-- Publication Item 6 -->
         <li style="display: flex; align-items: flex-start; margin-bottom: 30px;">
             <div style="flex: 0 0 150px; margin-right: 20px;">
-                <img src="thumbnail-placeholder.jpg" alt="Domain Adaptive Object Detection Thumbnail" style="width: 100%; height: auto; border-radius: 8px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);">
+                <img src="thumb_ssaldagger.png" alt="Domain Adaptive Object Detection Thumbnail" style="width: 100%; height: auto; border-radius: 8px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);">
             </div>
             <div style="flex: 1;">
                 <p><b style="color: #1f78b4;">Muhammad Akhtar Munir</b>, Muhammad Haris Khan, Muhammad Saquib Sarfraz, and Mohsen Ali.<br>
@@ -149,7 +149,7 @@ title: Akhtar, CV & ML
         <!-- Publication Item 7 -->
         <li style="display: flex; align-items: flex-start; margin-bottom: 30px;">
             <div style="flex: 0 0 150px; margin-right: 20px;">
-                <img src="thumbnail-placeholder.jpg" alt="Train-Time Loss Thumbnail" style="width: 100%; height: auto; border-radius: 8px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);">
+                <img src="thumb_bpc.png" alt="Train-Time Loss Thumbnail" style="width: 100%; height: auto; border-radius: 8px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);">
             </div>
             <div style="flex: 1;">
                 <p><b style="color: #1f78b4;">Muhammad Akhtar Munir</b>, Muhammad Haris Khan, Salman Khan, and Fahad Shahbaz Khan.<br>
@@ -163,7 +163,7 @@ title: Akhtar, CV & ML
         <!-- Publication Item 8 -->
         <li style="display: flex; align-items: flex-start; margin-bottom: 30px;">
             <div style="flex: 0 0 150px; margin-right: 20px;">
-                <img src="thumbnail-placeholder.jpg" alt="Towards Improving Calibration Thumbnail" style="width: 100%; height: auto; border-radius: 8px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);">
+                <img src="thumb_tcd.png" alt="Towards Improving Calibration Thumbnail" style="width: 100%; height: auto; border-radius: 8px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);">
             </div>
             <div style="flex: 1;">
                 <p><b style="color: #1f78b4;">Muhammad Akhtar Munir</b>, Muhammad Haris Khan, Muhammad Saquib Sarfraz, and Mohsen Ali.<br>
@@ -178,7 +178,7 @@ title: Akhtar, CV & ML
         <!-- Publication Item 9 -->
         <li style="display: flex; align-items: flex-start; margin-bottom: 30px;">
             <div style="flex: 0 0 150px; margin-right: 20px;">
-                <img src="thumbnail-placeholder.jpg" alt="SSAL Thumbnail" style="width: 100%; height: auto; border-radius: 8px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);">
+                <img src="thumb_ssal.png" alt="SSAL Thumbnail" style="width: 100%; height: auto; border-radius: 8px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);">
             </div>
             <div style="flex: 1;">
                 <p><b style="color: #1f78b4;">Muhammad Akhtar Munir</b>, Muhammad Haris Khan, Muhammad Saquib Sarfraz, and Mohsen Ali.<br>
