--- a/index.html
+++ b/index.html
@@ -40,10 +40,15 @@ title: Akhtar, CV & ML
     </div>
 
     <!-- Bio Section -->
-    <p style="font-family: 'Georgia', serif; font-size: 16px; line-height: 1.5; text-align: justify;">
+<!--     <p style="font-family: 'Georgia', serif; font-size: 16px; line-height: 1.5; text-align: justify;">
         I am a Postdoctoral Research Associate in Computer Vision at MBZUAI in Abu Dhabi. My research spans areas like Domain Adaptation, Uncertainty Estimation, Model Calibration, and Vision-Language Models (VLMs). 
         Currently, I am focused on tackling challenges in Model Calibration, enhancing the accuracy of Weather Modeling, and improving Remote Sensing analysis through VLMs.
-    </p>
+    </p> -->
+    <div style="background-color: #f7f7f7; padding: 20px 30px; border-radius: 8px; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1); font-family: 'Georgia', serif; font-size: 16px; line-height: 1.8; color: #2c3e50; margin-bottom: 30px;">
+    <p>I am a Postdoctoral Research Associate in Computer Vision at MBZUAI in Abu Dhabi. My research spans areas like <strong>Domain Adaptation</strong>, <strong>Uncertainty Estimation</strong>, <strong>Model Calibration</strong>, 
+        and <strong>Vision-Language Models (VLMs)</strong>. Currently, I am focused on tackling challenges in <strong>Model Calibration</strong>, enhancing the accuracy of <strong>Weather Modeling</strong>, 
+        and improving <strong>Remote Sensing</strong> analysis through VLMs.</p>
+    </div>
 
     <!-- Publications Section -->
     <a id="publications" class="anchor"></a>
