--- a/index.html
+++ b/index.html
@@ -4,29 +4,30 @@ title: Akhtar, CV & ML
 ---
 
 <div class="blurb">
-    <h1>Hi, I'm Akhtar</h1>
+    <h1 style="font-family: 'Roboto Slab', serif; font-size: 32px; color: #2c3e50;">Hi, I'm Akhtar</h1>
 
-    <!-- Link to FontAwesome icons (make sure to include this in the head of your HTML) -->
+    <!-- Link to Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
     <div style="display: flex; justify-content: space-between;">
         <!-- Left section: Title, Social Links, and Email Addresses -->
         <div>
-            <p style="font-family: 'Arial', sans-serif; font-size: 20px; color: #333; line-height: 1.5; margin: 0;">
-                <strong style="font-size: 22px; color: #2c3e50;">Postdoc. Research Associate (CV & ML)</strong><br>
-                <span style="font-size: 18px; color: #7f8c8d;">MBZUAI, Abu Dhabi</span><br>
-                <span style="font-size: 16px; color: #7f8c8d;">United Arab Emirates</span><br>
+            <p style="font-family: 'Lato', sans-serif; font-size: 18px; color: #333; line-height: 1.6; margin: 0;">
+                <strong style="font-family: 'Roboto Slab', serif; font-size: 20px; color: #2c3e50;">Postdoc. Research Associate (CV & ML)</strong><br>
+                <span style="font-size: 16px; color: #7f8c8d;">MBZUAI, Abu Dhabi</span><br>
+                <span style="font-size: 14px; color: #7f8c8d;">United Arab Emirates</span><br>
 
                 <!-- Social Media Links with Icons -->
                 <ul class="social" style="list-style-type: none; padding-left: 0; display: flex; gap: 10px; margin-bottom: 10px;">
-                    <li><a href="https://www.linkedin.com/in/muhammad-akhtar-munir-697b3976/" style="text-decoration: none; color: #0e76a8;"><i class="fab fa-linkedin" style="font-size: 24px;"></i> LinkedIn</a></li>
-                    <li><a href="https://twitter.com/akhtarTalks" style="text-decoration: none; color: #1DA1F2;"><i class="fab fa-twitter" style="font-size: 24px;"></i> Twitter</a></li>
-                    <li><a href="https://scholar.google.com.pk/citations?user=sT-epZAAAAAJ&hl=en" style="text-decoration: none; color: #4285F4;"><i class="fas fa-graduation-cap" style="font-size: 24px;"></i> Google Scholar</a></li>
-                    <li><a href="https://github.com/akhtarvision" style="text-decoration: none; color: #333;"><i class="fab fa-github" style="font-size: 24px;"></i> GitHub</a></li>
+                    <li><a href="https://www.linkedin.com/in/muhammad-akhtar-munir-697b3976/" style="text-decoration: none; color: #0e76a8;"><i class="fab fa-linkedin" style="font-size: 20px;"></i> LinkedIn</a></li>
+                    <li><a href="https://twitter.com/akhtarTalks" style="text-decoration: none; color: #1DA1F2;"><i class="fab fa-twitter" style="font-size: 20px;"></i> Twitter</a></li>
+                    <li><a href="https://scholar.google.com.pk/citations?user=sT-epZAAAAAJ&hl=en" style="text-decoration: none; color: #4285F4;"><i class="fas fa-graduation-cap" style="font-size: 20px;"></i> Google Scholar</a></li>
+                    <li><a href="https://github.com/akhtarvision" style="text-decoration: none; color: #333;"><i class="fab fa-github" style="font-size: 20px;"></i> GitHub</a></li>
                 </ul>
 
                 <!-- Email Addresses with Special Font Styling -->
-                <address style="font-family: 'Arial', sans-serif; font-size: 18px; color: #555; letter-spacing: 0.5px;">
+                <address style="font-family: 'Lato', sans-serif; font-size: 16px; color: #555; letter-spacing: 0.5px;">
                     <span>its<span style="font-family: 'Courier New', monospace;">&lt;dot&gt;</span>akhtar90<span style="font-family: 'Courier New', monospace;">&lt;at&gt;</span>gmail<span style="font-family: 'Courier New', monospace;">&lt;dot&gt;</span>com</span><br>
                     <span>akhtar<span style="font-family: 'Courier New', monospace;">&lt;dot&gt;</span>munir<span style="font-family: 'Courier New', monospace;">&lt;at&gt;</span>mbzuai<span style="font-family: 'Courier New', monospace;">&lt;dot&gt;</span>ac<span style="font-family: 'Courier New', monospace;">&lt;dot&gt;</span>ae</span>
                 </address>
@@ -40,12 +41,8 @@ title: Akhtar, CV & ML
     </div>
 
     <!-- Bio Section -->
-<!--     <p style="font-family: 'Georgia', serif; font-size: 16px; line-height: 1.5; text-align: justify;">
-        I am a Postdoctoral Research Associate in Computer Vision at MBZUAI in Abu Dhabi. My research spans areas like Domain Adaptation, Uncertainty Estimation, Model Calibration, and Vision-Language Models (VLMs). 
-        Currently, I am focused on tackling challenges in Model Calibration, enhancing the accuracy of Weather Modeling, and improving Remote Sensing analysis through VLMs.
-    </p> -->
-    <div style="background-color: #f7f7f7; padding: 20px 30px; border-radius: 8px; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1); font-family: 'Georgia', serif; font-size: 16px; line-height: 1.8; color: #2c3e50; margin-bottom: 30px;">
-    <p>I am a Postdoctoral Research Associate in Computer Vision at MBZUAI in Abu Dhabi. My research spans areas like <strong>Domain Adaptation</strong>, <strong>Uncertainty Estimation</strong>, <strong>Model Calibration</strong>, 
+    <div style="background-color: #f7f7f7; padding: 20px 30px; border-radius: 8px; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1); font-family: 'Lato', sans-serif; font-size: 16px; line-height: 1.8; color: #2c3e50; margin-bottom: 30px;">
+        <p>I am a Postdoctoral Research Associate in Computer Vision at MBZUAI in Abu Dhabi. My research spans areas like <strong>Domain Adaptation</strong>, <strong>Uncertainty Estimation</strong>, <strong>Model Calibration</strong>, 
         and <strong>Vision-Language Models (VLMs)</strong>. Currently, I am focused on tackling challenges in <strong>Model Calibration</strong>, enhancing the accuracy of <strong>Weather Modeling</strong>, 
         and improving <strong>Remote Sensing</strong> analysis through VLMs.</p>
     </div>
@@ -54,14 +51,6 @@ title: Akhtar, CV & ML
     <a id="publications" class="anchor"></a>
     <h2>Selected Publications</h2>
     <ul style="font-family: 'Georgia', serif; font-size: 17px; line-height: 1.8; color: #2c3e50; padding-left: 0; list-style-type: none;">
-<!--         <li style="margin-bottom: 20px;">
-            <p><b style="color: #1f78b4;">Muhammad Akhtar Munir</b>*, Muhamad Sohail Danish*, Syed Roshaan Ali Shah, Kartik Kuckreja, Fahad Shahbaz Khan, Paolo Fraccaro, Alexandre Lacoste, and Salman Khan.<br>
-               <strong>"GEOBench-VLM: Benchmarking Vision-Language Models for Geospatial Tasks"</strong>. 
-               In <strong>arXiv (2024)</strong>. <i>*Equally contributing first authors.</i><br>
-               <a href="https://arxiv.org/pdf/2411.19325" style="text-decoration: none; color: #3498db;">[Paper]</a> 
-               <a href="https://github.com/The-AI-Alliance/GEO-Bench-VLM" style="text-decoration: none; color: #e74c3c;">[Code]</a>
-            </p>
-        </li> -->
         <li style="display: flex; align-items: flex-start; margin-bottom: 30px;">
         <!-- Thumbnail -->
         <div style="flex: 0 0 150px; margin-right: 20px;">
