--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@ title: Akhtar, CV & ML
         <div>
             <p style="font-family: 'Lato', sans-serif; font-size: 18px; color: #333; line-height: 1.6; margin: 0;">
                 <strong style="font-family: 'Roboto Slab', serif; font-size: 20px; color: #2c3e50;">Postdoc. Research Associate (CV & ML)</strong><br>
-                <span style="font-size: 16px; color: #7f8c8d;">MBZUAI, Abu Dhabi</span><br>
-                <span style="font-size: 14px; color: #7f8c8d;">United Arab Emirates</span><br>
+                <span style="font-size: 16px; color: #495354;">MBZUAI, Abu Dhabi</span><br>
+                <span style="font-size: 14px; color: #495354;">United Arab Emirates</span><br>
 
                 <!-- Social Media Links with Icons -->
                 <ul class="social" style="list-style-type: none; padding-left: 0; display: flex; gap: 10px; margin-bottom: 10px;">
@@ -49,23 +49,21 @@ title: Akhtar, CV & ML
 
     <!-- Publications Section -->
     <a id="publications" class="anchor"></a>
-    <h2>Selected Publications</h2>
-    <ul style="font-family: 'Georgia', serif; font-size: 17px; line-height: 1.8; color: #2c3e50; padding-left: 0; list-style-type: none;">
+    <h2 style="font-family: 'Roboto Slab', serif; font-size: 28px; color: #2c3e50;">Selected Publications</h2>
+    <ul style="font-family: 'Lato', sans-serif; font-size: 16px; line-height: 1.8; color: #2c3e50; padding-left: 0; list-style-type: none;">
+        <!-- Publication Item 1 -->
         <li style="display: flex; align-items: flex-start; margin-bottom: 30px;">
-        <!-- Thumbnail -->
-        <div style="flex: 0 0 150px; margin-right: 20px;">
-            <img src="thumb_geo.png" alt="GEOBench-VLM Thumbnail" style="width: 100%; height: auto; border-radius: 8px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);">
-        </div>
-
-        <!-- Publication Details -->
-        <div style="flex: 1;">
-            <p><b style="color: #1f78b4;">Muhammad Akhtar Munir</b>*, Muhamad Sohail Danish*, Syed Roshaan Ali Shah, Kartik Kuckreja, Fahad Shahbaz Khan, Paolo Fraccaro, Alexandre Lacoste, and Salman Khan.<br>
-               <strong>"GEOBench-VLM: Benchmarking Vision-Language Models for Geospatial Tasks"</strong>. 
-               In <strong>arXiv (2024)</strong>. <i>*Equally contributing first authors.</i><br>
-               <a href="https://arxiv.org/pdf/2411.19325" style="text-decoration: none; color: #3498db;">[Paper]</a> 
-               <a href="https://github.com/The-AI-Alliance/GEO-Bench-VLM" style="text-decoration: none; color: #e74c3c;">[Code]</a>
-            </p>
-        </div>
+            <div style="flex: 0 0 150px; margin-right: 20px;">
+                <img src="thumb_geo.png" alt="GEOBench-VLM Thumbnail" style="width: 100%; height: auto; border-radius: 8px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);">
+            </div>
+            <div style="flex: 1;">
+                <p><b style="color: #1f78b4;">Muhammad Akhtar Munir</b>*, Muhamad Sohail Danish*, Syed Roshaan Ali Shah, Kartik Kuckreja, Fahad Shahbaz Khan, Paolo Fraccaro, Alexandre Lacoste, and Salman Khan.<br>
+                   <strong>"GEOBench-VLM: Benchmarking Vision-Language Models for Geospatial Tasks"</strong>. 
+                   In <strong>arXiv (2024)</strong>. <i>*Equally contributing first authors.</i><br>
+                   <a href="https://arxiv.org/pdf/2411.19325" style="text-decoration: none; color: #3498db;">[Paper]</a> 
+                   <a href="https://github.com/The-AI-Alliance/GEO-Bench-VLM" style="text-decoration: none; color: #e74c3c;">[Code]</a>
+                </p>
+            </div>
         </li>
         <!-- Publication Item 2 -->
         <li style="display: flex; align-items: flex-start; margin-bottom: 30px;">
