--- a/index.html
+++ b/index.html
@@ -52,19 +52,22 @@ title: Akhtar, CV & ML
     <h2 style="font-family: 'Roboto Slab', serif; font-size: 28px; color: #2c3e50;">Selected Publications</h2>
     <ul style="font-family: 'Lato', sans-serif; font-size: 16px; line-height: 1.8; color: #2c3e50; padding-left: 0; list-style-type: none;">
         <!-- Publication Item 1 -->
-        <li style="display: flex; align-items: flex-start; margin-bottom: 30px;">
-            <div style="flex: 0 0 150px; margin-right: 20px;">
+        <li style="display: flex; align-items: center; margin-bottom: 30px; font-family: 'Lato', sans-serif; font-size: 16px; line-height: 1.8; color: #2c3e50;">
+            <!-- Thumbnail -->
+            <div style="flex: 0 0 150px; margin-right: 20px; display: flex; align-items: center;">
                 <img src="thumb_geo.png" alt="GEOBench-VLM Thumbnail" style="width: 100%; height: auto; border-radius: 8px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);">
             </div>
+            
+            <!-- Publication Details -->
             <div style="flex: 1;">
-        <p style="font-family: 'Lato', sans-serif; font-size: 16px; line-height: 1.8; color: #2c3e50;">
-            <b style="font-family: 'Lato', sans-serif; color: #1f78b4;">Muhammad Akhtar Munir</b>*, Muhamad Sohail Danish*, Syed Roshaan Ali Shah, Kartik Kuckreja, Fahad Shahbaz Khan, Paolo Fraccaro, Alexandre Lacoste, and Salman Khan.<br>
-            <strong style="font-family: 'Roboto Slab', serif; font-size: 16px; color: #2c3e50;">"GEOBench-VLM: Benchmarking Vision-Language Models for Geospatial Tasks"</strong>. 
-            In <strong style="font-family: 'Roboto Slab', serif; font-size: 16px; color: #2c3e50;">arXiv (2024)</strong>. <i style="font-family: 'Lato', sans-serif;">*Equally contributing first authors.</i><br>
-            <a href="https://arxiv.org/pdf/2411.19325" style="font-family: 'Lato', sans-serif; text-decoration: none; color: #3498db;">[Paper]</a> 
-            <a href="https://github.com/The-AI-Alliance/GEO-Bench-VLM" style="font-family: 'Lato', sans-serif; text-decoration: none; color: #e74c3c;">[Code]</a>
-        </p>
-</div>
+                <p style="margin: 0;">
+                    <b style="color: #1f78b4;">Muhammad Akhtar Munir</b>*, Muhamad Sohail Danish*, Syed Roshaan Ali Shah, Kartik Kuckreja, Fahad Shahbaz Khan, Paolo Fraccaro, Alexandre Lacoste, and Salman Khan.<br>
+                    <strong style="font-family: 'Roboto Slab', serif; font-size: 16px; color: #2c3e50;">"GEOBench-VLM: Benchmarking Vision-Language Models for Geospatial Tasks"</strong>. 
+                    In <strong>arXiv (2024)</strong>. <i>*Equally contributing first authors.</i><br>
+                    <a href="https://arxiv.org/pdf/2411.19325" style="text-decoration: none; color: #3498db;">[Paper]</a> 
+                    <a href="https://github.com/The-AI-Alliance/GEO-Bench-VLM" style="text-decoration: none; color: #e74c3c;">[Code]</a>
+                </p>
+            </div>
         </li>
         <!-- Publication Item 2 -->
         <li style="display: flex; align-items: flex-start; margin-bottom: 30px;">
