--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@ title: Akhtar, CV & ML
             <!-- Publication Details -->
             <div style="flex: 1;">
                 <p style="margin: 0;">
-                    <b style="color: #1f78b4;">Muhammad Akhtar Munir</b>*, Muhamad Sohail Danish*, Syed Roshaan Ali Shah, Kartik Kuckreja, Fahad Shahbaz Khan, Paolo Fraccaro, Alexandre Lacoste, and Salman Khan.<br>
+                    <p style="font-family: 'Roboto Slab', serif; font-size: 16px; line-height: 1.8; color: #2c3e50; margin: 0;">
+                        <b style="font-family: 'Roboto Slab', serif; color: #1f78b4;">Muhammad Akhtar Munir</b>*, Muhamad Sohail Danish*, Syed Roshaan Ali Shah, Kartik Kuckreja, Fahad Shahbaz Khan, Paolo Fraccaro, Alexandre Lacoste, and Salman Khan.
+                    </p>
                     <strong style="font-family: 'Roboto Slab', serif; font-size: 16px; color: #2c3e50;">"GEOBench-VLM: Benchmarking Vision-Language Models for Geospatial Tasks"</strong>. 
                     In <strong>arXiv (2024)</strong>. <i>*Equally contributing first authors.</i><br>
                     <a href="https://arxiv.org/pdf/2411.19325" style="text-decoration: none; color: #3498db;">[Paper]</a> 
