--- a/index.html
+++ b/index.html
@@ -57,17 +57,19 @@ title: Akhtar, CV & ML
             <div style="flex: 0 0 150px; margin-right: 20px; display: flex; align-items: center;">
                 <img src="thumb_geo.png" alt="GEOBench-VLM Thumbnail" style="width: 100%; height: auto; border-radius: 8px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);">
             </div>
-            
+        
             <!-- Publication Details -->
             <div style="flex: 1;">
-                <p style="margin: 0;">
-                    <p style="font-family: 'Roboto Slab', serif; font-size: 16px; line-height: 1.8; color: #2c3e50; margin: 0;">
-                        <b style="font-family: 'Roboto Slab', serif; color: #1f78b4;">Muhammad Akhtar Munir</b>*, Muhamad Sohail Danish*, Syed Roshaan Ali Shah, Kartik Kuckreja, Fahad Shahbaz Khan, Paolo Fraccaro, Alexandre Lacoste, and Salman Khan.
-                    </p>
-                    <strong style="font-family: 'Roboto Slab', serif; font-size: 16px; color: #2c3e50;">"GEOBench-VLM: Benchmarking Vision-Language Models for Geospatial Tasks"</strong>. 
-                    In <strong>arXiv (2024)</strong>. <i>*Equally contributing first authors.</i><br>
-                    <a href="https://arxiv.org/pdf/2411.19325" style="text-decoration: none; color: #3498db;">[Paper]</a> 
-                    <a href="https://github.com/The-AI-Alliance/GEO-Bench-VLM" style="text-decoration: none; color: #e74c3c;">[Code]</a>
+                <p style="font-family: 'Roboto Slab', serif; font-size: 16px; line-height: 1.8; color: #2c3e50; margin: 0;">
+                    <b style="color: #1f78b4;">Muhammad Akhtar Munir</b>*, Muhamad Sohail Danish*, Syed Roshaan Ali Shah, Kartik Kuckreja, Fahad Shahbaz Khan, Paolo Fraccaro, Alexandre Lacoste, and Salman Khan.
+                </p>
+                <p style="font-family: 'Roboto Slab', serif; font-size: 16px; color: #2c3e50; margin: 5px 0;">
+                    <strong>"GEOBench-VLM: Benchmarking Vision-Language Models for Geospatial Tasks"</strong>. 
+                    In <strong>arXiv (2024)</strong>. <i>*Equally contributing first authors.</i>
+                </p>
+                <p style="margin: 5px 0;">
+                    <a href="https://arxiv.org/pdf/2411.19325" style="font-family: 'Lato', sans-serif; text-decoration: none; color: #3498db;">[Paper]</a> 
+                    <a href="https://github.com/The-AI-Alliance/GEO-Bench-VLM" style="font-family: 'Lato', sans-serif; text-decoration: none; color: #e74c3c;">[Code]</a>
                 </p>
             </div>
         </li>
