--- a/index.html
+++ b/index.html
@@ -4,30 +4,30 @@ title: Akhtar, CV & ML
 ---
 
 <div class="blurb">
-    <h1 style="font-family: 'Roboto Slab', serif; font-size: 32px; color: #2c3e50;">Hi, I'm Akhtar</h1>
+    <h1 style="font-family: 'Roboto Slab', serif; font-size: 28px; color: #2c3e50; margin-bottom: 20px;">Hi, I'm Akhtar</h1>
 
     <!-- Link to Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
-    <div style="display: flex; justify-content: space-between;">
+    <div style="display: flex; justify-content: space-between; align-items: center;">
         <!-- Left section: Title, Social Links, and Email Addresses -->
-        <div>
-            <p style="font-family: 'Lato', sans-serif; font-size: 18px; color: #333; line-height: 1.6; margin: 0;">
-                <strong style="font-family: 'Roboto Slab', serif; font-size: 20px; color: #2c3e50;">Postdoc. Research Associate (CV & ML)</strong><br>
+        <div style="flex: 1;">
+            <p style="font-family: 'Lato', sans-serif; font-size: 16px; color: #495354; line-height: 1.6; margin: 0;">
+                <strong style="font-family: 'Roboto Slab', serif; font-size: 18px; color: #2c3e50;">Postdoc. Research Associate (CV & ML)</strong><br>
                 <span style="font-size: 16px; color: #495354;">MBZUAI, Abu Dhabi</span><br>
-                <span style="font-size: 14px; color: #495354;">United Arab Emirates</span><br>
+                <span style="font-size: 16px; color: #495354;">United Arab Emirates</span><br>
 
                 <!-- Social Media Links with Icons -->
-                <ul class="social" style="list-style-type: none; padding-left: 0; display: flex; gap: 10px; margin-bottom: 10px;">
-                    <li><a href="https://www.linkedin.com/in/muhammad-akhtar-munir-697b3976/" style="text-decoration: none; color: #0e76a8;"><i class="fab fa-linkedin" style="font-size: 20px;"></i> LinkedIn</a></li>
-                    <li><a href="https://twitter.com/akhtarTalks" style="text-decoration: none; color: #1DA1F2;"><i class="fab fa-twitter" style="font-size: 20px;"></i> Twitter</a></li>
-                    <li><a href="https://scholar.google.com.pk/citations?user=sT-epZAAAAAJ&hl=en" style="text-decoration: none; color: #4285F4;"><i class="fas fa-graduation-cap" style="font-size: 20px;"></i> Google Scholar</a></li>
-                    <li><a href="https://github.com/akhtarvision" style="text-decoration: none; color: #333;"><i class="fab fa-github" style="font-size: 20px;"></i> GitHub</a></li>
+                <ul class="social" style="list-style-type: none; padding-left: 0; display: flex; gap: 10px; margin: 10px 0;">
+                    <li><a href="https://www.linkedin.com/in/muhammad-akhtar-munir-697b3976/" style="text-decoration: none; color: #0e76a8;"><i class="fab fa-linkedin" style="font-size: 18px;"></i> LinkedIn</a></li>
+                    <li><a href="https://twitter.com/akhtarTalks" style="text-decoration: none; color: #1DA1F2;"><i class="fab fa-twitter" style="font-size: 18px;"></i> Twitter</a></li>
+                    <li><a href="https://scholar.google.com.pk/citations?user=sT-epZAAAAAJ&hl=en" style="text-decoration: none; color: #4285F4;"><i class="fas fa-graduation-cap" style="font-size: 18px;"></i> Google Scholar</a></li>
+                    <li><a href="https://github.com/akhtarvision" style="text-decoration: none; color: #333;"><i class="fab fa-github" style="font-size: 18px;"></i> GitHub</a></li>
                 </ul>
 
                 <!-- Email Addresses with Special Font Styling -->
-                <address style="font-family: 'Lato', sans-serif; font-size: 16px; color: #555; letter-spacing: 0.5px;">
+                <address style="font-family: 'Lato', sans-serif; font-size: 16px; color: #555; line-height: 1.6; letter-spacing: 0.5px;">
                     <span>its<span style="font-family: 'Courier New', monospace;">&lt;dot&gt;</span>akhtar90<span style="font-family: 'Courier New', monospace;">&lt;at&gt;</span>gmail<span style="font-family: 'Courier New', monospace;">&lt;dot&gt;</span>com</span><br>
                     <span>akhtar<span style="font-family: 'Courier New', monospace;">&lt;dot&gt;</span>munir<span style="font-family: 'Courier New', monospace;">&lt;at&gt;</span>mbzuai<span style="font-family: 'Courier New', monospace;">&lt;dot&gt;</span>ac<span style="font-family: 'Courier New', monospace;">&lt;dot&gt;</span>ae</span>
                 </address>
@@ -35,21 +35,23 @@ title: Akhtar, CV & ML
         </div>
 
         <!-- Right section: Profile Picture -->
-        <div style="display: flex; flex-direction: column; align-items: flex-end;">
-            <img class="roundImg" src="ul_pic.jpeg" alt="profile" style="width: 230px; height: 184px; object-fit: cover;">
+        <div style="flex: 0 0 230px; display: flex; justify-content: flex-end;">
+            <img class="roundImg" src="ul_pic.jpeg" alt="profile" style="width: 230px; height: 184px; object-fit: cover; border-radius: 8px;">
         </div>
     </div>
 
     <!-- Bio Section -->
-    <div style="background-color: #f7f7f7; padding: 20px 30px; border-radius: 8px; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1); font-family: 'Lato', sans-serif; font-size: 16px; line-height: 1.8; color: #2c3e50; margin-bottom: 30px;">
-        <p>I am a Postdoctoral Research Associate in Computer Vision at MBZUAI in Abu Dhabi. My research spans areas like <strong>Domain Adaptation</strong>, <strong>Uncertainty Estimation</strong>, <strong>Model Calibration</strong>, 
+    <div style="background-color: #f7f7f7; padding: 20px 30px; border-radius: 8px; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1); font-family: 'Lato', sans-serif; font-size: 16px; line-height: 1.8; color: #2c3e50; margin-top: 30px;">
+        <p style="margin: 0;">I am a Postdoctoral Research Associate in Computer Vision at MBZUAI in Abu Dhabi. My research spans areas like <strong>Domain Adaptation</strong>, <strong>Uncertainty Estimation</strong>, <strong>Model Calibration</strong>, 
         and <strong>Vision-Language Models (VLMs)</strong>. Currently, I am focused on tackling challenges in <strong>Model Calibration</strong>, enhancing the accuracy of <strong>Weather Modeling</strong>, 
         and improving <strong>Remote Sensing</strong> analysis through VLMs.</p>
     </div>
+</div>
+
 
     <!-- Publications Section -->
     <a id="publications" class="anchor"></a>
-    <h2 style="font-family: 'Roboto Slab', serif; font-size: 28px; color: #2c3e50;">Selected Publications</h2>
+    <h2 style="font-family: 'Roboto Slab', serif; font-size: 20px; color: #2c3e50;">Selected Publications</h2>
     <ul style="font-family: 'Lato', sans-serif; font-size: 16px; line-height: 1.8; color: #2c3e50; padding-left: 0; list-style-type: none;">
         <!-- Publication Item 1 -->
         <li style="display: flex; align-items: center; margin-bottom: 30px; font-family: 'Lato', sans-serif; font-size: 16px; line-height: 1.8; color: #2c3e50;">
