--- a/index.html
+++ b/index.html
@@ -36,8 +36,13 @@ title: Akhtar, CV & ML
 
         <!-- Right section: Profile Picture -->
         <div style="flex: 0 0 230px; display: flex; justify-content: flex-end;">
-    <div style="border-radius: 8px; padding: 3px; background: linear-gradient(135deg, pink, purple, black);">
-        <img class="roundImg" src="ul_pic.jpeg" alt="profile" style="width: 230px; height: 184px; object-fit: cover; border-radius: 8px; display: block;">
+       <div style="flex: 0 0 230px; display: flex; justify-content: flex-end;">
+        <img class="roundImg" src="ul_pic.jpeg" alt="profile" 
+             style="width: 230px; height: 184px; object-fit: cover; border-radius: 8px; 
+                    border: 2px solid transparent; 
+                    background-image: linear-gradient(135deg, #ff007f, #a533ff, #000000); 
+                    background-origin: border-box; 
+                    background-clip: padding-box, border-box;">
     </div>
 </div>
     </div>
