--- a/index.html
+++ b/index.html
@@ -48,11 +48,21 @@ title: Akhtar, CV & ML
     </div>
 
     <!-- Bio Section -->
-    <div style="background-color: #f7f7f7; padding: 20px 30px; border-radius: 8px; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1); font-family: 'Lato', sans-serif; font-size: 16px; line-height: 1.8; color: #2c3e50; margin-top: 30px;">
-        <p style="margin: 0;">I am a Postdoctoral Research Associate in Computer Vision at MBZUAI in Abu Dhabi. My research spans areas like <strong>Domain Adaptation</strong>, <strong>Uncertainty Estimation</strong>, <strong>Model Calibration</strong>, 
-        and <strong>Vision-Language Models (VLMs)</strong>. Currently, I am focused on tackling challenges in <strong>Model Calibration</strong>, enhancing the accuracy of <strong>Weather Modeling</strong>, 
-        and improving <strong>Remote Sensing</strong> analysis through VLMs.</p>
+    <div style="background: linear-gradient(135deg, #ff007f, #a533ff, #000000); padding: 3px; border-radius: 10px; margin-top: 30px; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);">
+    <div style="background-color: #ffffff; padding: 20px 30px; border-radius: 8px; font-family: 'Lato', sans-serif; font-size: 16px; line-height: 1.8; color: #2c3e50;">
+        <p style="margin: 0;">
+            I am a Postdoctoral Research Associate in Computer Vision at MBZUAI in Abu Dhabi. My research spans areas like 
+            <strong style="color: #ff007f;">Domain Adaptation</strong>, 
+            <strong style="color: #a533ff;">Uncertainty Estimation</strong>, 
+            <strong style="color: #ff007f;">Model Calibration</strong>, 
+            and <strong style="color: #a533ff;">Vision-Language Models (VLMs)</strong>. 
+            Currently, I am focused on tackling challenges in 
+            <strong style="color: #ff007f;">Model Calibration</strong>, 
+            enhancing the accuracy of <strong style="color: #a533ff;">Weather Modeling</strong>, 
+            and improving <strong style="color: #ff007f;">Remote Sensing</strong> analysis through VLMs.
+        </p>
     </div>
+</div>
 </div>
 
 
