--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@ title: Akhtar, CV & ML
 
     <!-- Bio Section -->
     <div style="background: linear-gradient(135deg, #ff007f, #a533ff, #000000); padding: 3px; border-radius: 10px; margin-top: 30px; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);">
-    <div style="background-color: #ffffff; padding: 20px 30px; border-radius: 8px; font-family: 'Lato', sans-serif; font-size: 16px; line-height: 1.8; color: #2c3e50;">
-        <p style="margin: 0, font-size: 16px;">
+    <div style="background-color: #ffffff; padding: 20px 30px; border-radius: 8px; font-family: 'Lato', sans-serif; font-size: 14px; line-height: 1.6; color: #2c3e50;">
+        <p style="margin: 0;">
             I am a Postdoctoral Research Associate in Computer Vision at MBZUAI in Abu Dhabi. My research spans areas like 
             <strong style="color: #ff007f;">Domain Adaptation</strong>, 
             <strong style="color: #a533ff;">Uncertainty Estimation</strong>, 
