--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ title: Akhtar, CV & ML
 
     <!-- Publications Section -->
     <a id="publications" class="anchor"></a>
-    <h2 style="font-family: 'Roboto Slab', serif; font-size: 20px; color: #2c3e50;">Selected Publications</h2>
+    <h2 style="font-family: 'Roboto Slab', serif; font-size: 20px; color: ##ffffff;">Publications (Selected)</h2>
     <ul style="font-family: 'Lato', sans-serif; font-size: 16px; line-height: 1.8; color: #2c3e50; padding-left: 0; list-style-type: none;">
         <!-- Publication Item 1 -->
         <li style="display: flex; align-items: center; margin-bottom: 30px; font-family: 'Lato', sans-serif; font-size: 16px; line-height: 1.8; color: #2c3e50;">
@@ -279,14 +279,14 @@ title: Akhtar, CV & ML
 
     <!-- Experience Section -->
 <a id="experience" class="anchor"></a>
-<h2 style="font-family: 'Roboto Slab', serif; font-size: 24px; color: #2c3e50; margin-bottom: 15px;">Experience</h2>
-<div style="font-family: 'Lato', sans-serif; font-size: 14px; line-height: 1.6; color: #2c3e50;">
+<h2 style="font-family: 'Roboto Slab', serif; font-size: 24px; color: #ffffff; margin-bottom: 15px;">Experience</h2>
+<div style="font-family: 'Lato', sans-serif; font-size: 16px; line-height: 1.6; color: #2c3e50;">
     <ul style="list-style-type: disc; padding-left: 20px;">
         <li style="margin-bottom: 15px;">
             <strong>Research Associate</strong>, Mohamed bin Zayed University of Artificial Intelligence (MBZUAI), Abu Dhabi, UAE
             <ul style="list-style-type: none; padding-left: 0; margin-top: 5px;">
                 <li><strong>Duration:</strong> July 2023 – Present</li>
-                <li><strong>Association:</strong> Computer Vision Department</li>
+<!--                 <li><strong>Association:</strong> Computer Vision Department</li> -->
                 <li><strong>Advisors:</strong> 
                     <a href="https://scholar.google.es/citations?user=M59O9lkAAAAJ" style="text-decoration: none; color: #1f78b4;">Dr. Salman Khan</a>, 
                     <a href="https://scholar.google.com/citations?user=zvaeYnUAAAAJ&hl=en" style="text-decoration: none; color: #1f78b4;">Dr. Fahad S Khan</a>
@@ -298,7 +298,7 @@ title: Akhtar, CV & ML
             <strong>Research Intern</strong>, Mohamed bin Zayed University of Artificial Intelligence (MBZUAI), Abu Dhabi, UAE
             <ul style="list-style-type: none; padding-left: 0; margin-top: 5px;">
                 <li><strong>Duration:</strong> August 2022 – June 2023</li>
-                <li><strong>Association:</strong> Computer Vision Department</li>
+<!--                 <li><strong>Association:</strong> Computer Vision Department</li> -->
                 <li><strong>Advisors:</strong> 
                     <a href="https://scholar.google.es/citations?user=M59O9lkAAAAJ" style="text-decoration: none; color: #1f78b4;">Dr. Salman Khan</a>, 
                     <a href="https://scholar.google.com/citations?user=zvaeYnUAAAAJ&hl=en" style="text-decoration: none; color: #1f78b4;">Dr. Fahad S Khan</a>
@@ -310,7 +310,7 @@ title: Akhtar, CV & ML
             <strong>Research Associate</strong>, Information Technology University (ITU), Lahore, Pakistan
             <ul style="list-style-type: none; padding-left: 0; margin-top: 5px;">
                 <li><strong>Duration:</strong> January 2022 – July 2022</li>
-                <li><strong>Association:</strong> Under Google Research Scholar Award, ITU</li>
+<!--                 <li><strong>Association:</strong> Under Google Research Scholar Award, ITU</li> -->
                 <li><strong>PI:</strong> 
                     <a href="https://scholar.google.com/citations?user=59ISSCEAAAAJ&hl=en" style="text-decoration: none; color: #1f78b4;">Dr. Mohsen Ali</a>
                 </li>
@@ -321,7 +321,7 @@ title: Akhtar, CV & ML
             <strong>Fellowship</strong>, Information Technology University (ITU), Lahore, Pakistan
             <ul style="list-style-type: none; padding-left: 0; margin-top: 5px;">
                 <li><strong>Duration:</strong> September 2017 – August 2021</li>
-                <li><strong>Association:</strong> Intelligent Machines Lab, ITU</li>
+<!--                 <li><strong>Association:</strong> Intelligent Machines Lab, ITU</li> -->
                 <li><strong>Advisor:</strong> 
                     <a href="https://scholar.google.com/citations?user=59ISSCEAAAAJ&hl=en" style="text-decoration: none; color: #1f78b4;">Dr. Mohsen Ali</a>
                 </li>
@@ -332,7 +332,7 @@ title: Akhtar, CV & ML
             <strong>Lab Engineer</strong>, School of EE and CS (SEECS), NUST, Islamabad, Pakistan
             <ul style="list-style-type: none; padding-left: 0; margin-top: 5px;">
                 <li><strong>Duration:</strong> November 2013 – September 2017</li>
-                <li><strong>Association:</strong> Department of Computing, SEECS, NUST</li>
+<!--                 <li><strong>Association:</strong> Department of Computing, SEECS, NUST</li> -->
             </ul>
         </li>
     </ul>
