--- a/index.html
+++ b/index.html
@@ -339,20 +339,22 @@ title: Akhtar, CV & ML
 </div>
 
 
+<!-- Services & Honors Section -->
+<a id="services" class="anchor"></a>
+<h2 style="font-family: 'Roboto Slab', serif; font-size: 24px; color: #ffffff; margin-bottom: 15px;">Services & Honors</h2>
+<ul style="font-family: 'Lato', sans-serif; font-size: 16px; line-height: 1.6; color: #2c3e50; padding-left: 20px; list-style-type: disc;">
+    <li style="margin-bottom: 10px;"><strong>Reviewer:</strong> CVPR 2023-2025, ICLR 2024-2025, ICCV 2023, NeurIPS 2023-2024, ACM MM 2021</li>
+    <li style="margin-bottom: 10px;"><strong>Awardee:</strong> NeurIPS 2022 & 2023 Scholar Award, CVPR 2023 DEI Award</li>
+    <li style="margin-bottom: 10px;"><strong>Scholarship:</strong> PhD Fellowship, from Information Technology University, Lahore, Pakistan</li>
+    <li style="margin-bottom: 10px;"><strong>Conferences (Attended):</strong> CVPR 2023, NeurIPS 2023, CVPR 2024, BMVC 2024</li>
+</ul>
 
-    <!-- Services & Honors Section -->
-    <a id="services" class="anchor"></a>
-    <h2>Services & Honors</h2>
-    <ul>
-        <li><p><strong>Reviewer:</strong> CVPR 2024, ICLR 2024, CVPR 2023, ICCV 2023, NeurIPS 2023, ACM MM 2021</p></li>
-        <li><p><strong>Awardee:</strong> NeurIPS 2022 & 2023 Scholar Award, CVPR 2023 DEI Award</p></li>
-        <li><p><strong>Scholarship:</strong> PhD Fellowship, from Information Technology University, Lahore, Pakistan</p></li>
-        <li><p><strong>Summer School:</strong> EEML Summer School, Virtual Budapest, Hungary, 2021</p></li>
-    </ul>
+<!-- CV Section -->
+<a id="cv" class="anchor"></a>
+<h2 style="font-family: 'Roboto Slab', serif; font-size: 24px; color: #ffffff; margin-bottom: 10px;">Curriculum Vitae (CV)</h2>
+<p style="font-family: 'Lato', sans-serif; font-size: 16px; color: #2c3e50; line-height: 1.6; margin-bottom: 15px;">
+    Download CV as PDF: <a href="CV-Akhtar_M24.pdf" class="download" style="text-decoration: none; color: #3498db;">Download CV</a>
+</p>
 
-    <!-- CV Section -->
-    <a id="cv" class="anchor"></a>
-    <h2>Curriculum Vitae (CV)</h2>
-    <p>Download CV as PDF: <a href="CV-Akhtar_M24.pdf" class="download">Download CV</a></p>
 
 </div><!-- /.blurb -->
