--- a/index.html
+++ b/index.html
@@ -48,18 +48,18 @@ title: Akhtar, CV & ML
     </div>
 
     <!-- Bio Section -->
-    <div style="background: linear-gradient(135deg, #ff007f, #a533ff, #000000); padding: 3px; border-radius: 10px; margin-top: 30px; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);">
+    <div style="background: linear-gradient(135deg, #1f78b4, #ffffff); padding: 3px; border-radius: 10px; margin-top: 30px; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);">
     <div style="background-color: #ffffff; padding: 20px 30px; border-radius: 8px; font-family: 'Lato', sans-serif; font-size: 14px; line-height: 1.6; color: #2c3e50;">
         <p style="margin: 0;">
             I am a Postdoctoral Research Associate in Computer Vision at MBZUAI in Abu Dhabi. My research spans areas like 
-            <strong style="color: #ff007f;">Domain Adaptation</strong>, 
-            <strong style="color: #a533ff;">Uncertainty Estimation</strong>, 
-            <strong style="color: #ff007f;">Model Calibration</strong>, 
-            and <strong style="color: #a533ff;">Vision-Language Models (VLMs)</strong>. 
+            <strong style="color: #1f78b4;">Domain Adaptation</strong>, 
+            <strong style="color: #1f78b4;">Uncertainty Estimation</strong>, 
+            <strong style="color: #1f78b4;">Model Calibration</strong>, 
+            and <strong style="color: #1f78b4;">Vision-Language Models (VLMs)</strong>. 
             Currently, I am focused on tackling challenges in 
-            <strong style="color: #ff007f;">Model Calibration</strong>, 
-            enhancing the accuracy of <strong style="color: #a533ff;">Weather Modeling</strong>, 
-            and improving <strong style="color: #ff007f;">Remote Sensing</strong> analysis through VLMs.
+            <strong style="color: #1f78b4;">Model Calibration</strong>, 
+            enhancing the accuracy of <strong style="color: #1f78b4;">Weather Modeling</strong>, 
+            and improving <strong style="color: #1f78b4;">Remote Sensing</strong> analysis through VLMs.
         </p>
     </div>
 </div>
