--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ title: Akhtar, CV & ML
     <div style="background: linear-gradient(135deg, #1f78b4, #000000); padding: 2px; border-radius: 10px; margin-top: 30px; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);">
     <div style="background-color: #ffffff; padding: 20px 30px; border-radius: 8px; font-family: 'Lato', sans-serif; font-size: 14px; line-height: 1.6; color: #2c3e50;">
         <p style="margin: 0;">
-            I am a Postdoctoral Research Associate in Computer Vision at MBZUAI in Abu Dhabi. My research spans areas like 
+            I am a Postdoctoral Fellow in Computer Vision at MBZUAI in Abu Dhabi. My research spans areas like 
             <strong style="color: #1f78b4;">Domain Adaptation</strong>, 
             <strong style="color: #1f78b4;">Uncertainty Estimation</strong>, 
             <strong style="color: #1f78b4;">Model Calibration</strong>, 
@@ -120,7 +120,7 @@ title: Akhtar, CV & ML
                 </p>
                 <p style="font-family: 'Roboto Slab', serif; font-size: 16px; color: #2c3e50; margin: 5px 0;">
                     <strong>"GEOBench-VLM: Benchmarking Vision-Language Models for Geospatial Tasks"</strong>. 
-                    In <strong>arXiv (2024)</strong>. <i>*Equally contributing first authors.</i>
+                    In <strong>arXiv (2025)</strong>. <i>*Equally contributing first authors.</i>
                 </p>
                 <p style="margin: 5px 0;">
                     <a href="https://arxiv.org/pdf/2411.19325" style="font-family: 'Lato', sans-serif; text-decoration: none; color: #3498db;">[Paper]</a> 
