--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ title: Akhtar, CV & ML
             <li style="display: flex; align-items: center; margin-bottom: 30px; font-family: 'Lato', sans-serif; font-size: 16px; line-height: 1.8; color: #2c3e50;">
                 <!-- Thumbnail -->
                 <div style="flex: 0 0 150px; margin-right: 20px; display: flex; align-items: center;">
-                    <img src="thumb_weather_.png" alt="Weather Forecasting Thumbnail" style="width: 100%; height: auto; border-radius: 8px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);">
+                    <img src="aircast.png" alt="AirCast Thumbnail" style="width: 100%; height: auto; border-radius: 8px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);">
                 </div>
             
                 <!-- Publication Details -->
