--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@ title: Akhtar, CV & ML
                     </p>
                     <p style="margin: 5px 0;">
                         <a href="https://arxiv.org/pdf/2412.15190" style="font-family: 'Lato', sans-serif; text-decoration: none; color: #3498db;">[Paper]</a>
+                        <a href="https://huggingface.co/akshaydudhane/EarthDial_4B_RGB/tree/main" style="font-family: 'Lato', sans-serif; text-decoration: none; color: #e74c3c;">[Code]</a>
                     </p>
                 </div>
             </li>
