--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@ title: Akhtar, CV & ML
         <li style="margin-bottom: 15px;">
             <strong>Research Associate</strong>, Mohamed bin Zayed University of Artificial Intelligence (MBZUAI), Abu Dhabi, UAE
             <ul style="list-style-type: none; padding-left: 0; margin-top: 5px;">
-                <li><strong>Duration:</strong> July 2023 – Present</li>
+                <li><strong>Duration:</strong> Jul 2023 – Present</li>
 <!--                 <li><strong>Association:</strong> Computer Vision Department</li> -->
                 <li><strong>Advisors:</strong> 
                     <a href="https://scholar.google.es/citations?user=M59O9lkAAAAJ" style="text-decoration: none; color: #1f78b4;">Dr. Salman Khan</a>, 
@@ -342,7 +342,7 @@ title: Akhtar, CV & ML
         <li style="margin-bottom: 15px;">
             <strong>Research Intern</strong>, Mohamed bin Zayed University of Artificial Intelligence (MBZUAI), Abu Dhabi, UAE
             <ul style="list-style-type: none; padding-left: 0; margin-top: 5px;">
-                <li><strong>Duration:</strong> August 2022 – June 2023</li>
+                <li><strong>Duration:</strong> Aug 2022 – Jun 2023</li>
 <!--                 <li><strong>Association:</strong> Computer Vision Department</li> -->
                 <li><strong>Advisors:</strong> 
                     <a href="https://scholar.google.es/citations?user=M59O9lkAAAAJ" style="text-decoration: none; color: #1f78b4;">Dr. Salman Khan</a>, 
@@ -352,31 +352,30 @@ title: Akhtar, CV & ML
         </li>
 
         <li style="margin-bottom: 15px;">
-            <strong>Research Associate</strong>, Information Technology University (ITU), Lahore, Pakistan
+            <strong>Fellowship (4 Years) & Research Associate</strong>, Information Technology University (ITU), Lahore, Pakistan
             <ul style="list-style-type: none; padding-left: 0; margin-top: 5px;">
-                <li><strong>Duration:</strong> January 2022 – July 2022</li>
-<!--                 <li><strong>Association:</strong> Under Google Research Scholar Award, ITU</li> -->
+                <li><strong>Duration:</strong> Sep 2017 – Jul 2022</li>
                 <li><strong>PI:</strong> 
                     <a href="https://scholar.google.com/citations?user=59ISSCEAAAAJ&hl=en" style="text-decoration: none; color: #1f78b4;">Dr. Mohsen Ali</a>
                 </li>
             </ul>
         </li>
 
-        <li style="margin-bottom: 15px;">
-            <strong>Fellowship</strong>, Information Technology University (ITU), Lahore, Pakistan
-            <ul style="list-style-type: none; padding-left: 0; margin-top: 5px;">
-                <li><strong>Duration:</strong> September 2017 – August 2021</li>
+<!--         <li style="margin-bottom: 15px;"> -->
+<!--             <strong>Fellowship</strong>, Information Technology University (ITU), Lahore, Pakistan -->
+<!--             <ul style="list-style-type: none; padding-left: 0; margin-top: 5px;"> -->
+<!--                 <li><strong>Duration:</strong> Sep 2017 – Aug 2021</li> -->
 <!--                 <li><strong>Association:</strong> Intelligent Machines Lab, ITU</li> -->
-                <li><strong>Advisor:</strong> 
-                    <a href="https://scholar.google.com/citations?user=59ISSCEAAAAJ&hl=en" style="text-decoration: none; color: #1f78b4;">Dr. Mohsen Ali</a>
-                </li>
-            </ul>
-        </li>
+<!--                 <li><strong>Advisor:</strong>  -->
+<!--                     <a href="https://scholar.google.com/citations?user=59ISSCEAAAAJ&hl=en" style="text-decoration: none; color: #1f78b4;">Dr. Mohsen Ali</a> -->
+<!--                 </li> -->
+<!--             </ul> -->
+<!--         </li> -->
 
         <li style="margin-bottom: 15px;">
             <strong>Lab Engineer</strong>, School of EE and CS (SEECS), NUST, Islamabad, Pakistan
             <ul style="list-style-type: none; padding-left: 0; margin-top: 5px;">
-                <li><strong>Duration:</strong> November 2013 – September 2017</li>
+                <li><strong>Duration:</strong> Nov 2013 – Sep 2017</li>
 <!--                 <li><strong>Association:</strong> Department of Computing, SEECS, NUST</li> -->
             </ul>
         </li>
@@ -388,9 +387,9 @@ title: Akhtar, CV & ML
 <a id="services" class="anchor"></a>
 <h2 style="font-family: 'Roboto Slab', serif; font-size: 24px; color: #ffffff; margin-bottom: 15px;">Services & Honors</h2>
 <ul style="font-family: 'Lato', sans-serif; font-size: 16px; line-height: 1.6; color: #2c3e50; padding-left: 20px; list-style-type: disc;">
-    <li style="margin-bottom: 10px;"><strong>Reviewer:</strong> CVPR 2023-2025, ICLR 2024-2025, ICCV 2023-2025, NeurIPS 2023-2024</li>
+    <li style="margin-bottom: 10px;"><strong>Reviewer:</strong> CVPR 2023-2025, ICLR 2024-2025, ICCV 2023-2025, NeurIPS 2023-2025</li>
     <li style="margin-bottom: 10px;"><strong>Awardee:</strong> NeurIPS 2022 & 2023 Scholar Award, CVPR 2023 DEI Award</li>
-    <li style="margin-bottom: 10px;"><strong>Scholarship:</strong> PhD Fellowship, from Information Technology University, Lahore, Pakistan</li>
+    <li style="margin-bottom: 10px;"><strong>Scholarship:</strong> PhD Fellowship, from Information Technology University</li>
     <li style="margin-bottom: 10px;"><strong>Conferences (Attended):</strong> CVPR 2023, NeurIPS 2023, CVPR 2024, BMVC 2024</li>
 </ul>
 
