--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ title: Akhtar, CV & ML
             <!-- Publication Details -->
             <div style="flex: 1;">
                 <p style="font-family: 'Roboto Slab', serif; font-size: 16px; line-height: 1.8; color: #2c3e50; margin: 0;">
-                    <b style="color: #1f78b4;">Muhammad Akhtar Munir</b>*, Muhamad Sohail Danish*, Syed Roshaan Ali Shah, Kartik Kuckreja, Fahad Shahbaz Khan, Paolo Fraccaro, Alexandre Lacoste, and Salman Khan.
+                    Muhamad Sohail Danish*, <b style="color: #1f78b4;">Muhammad Akhtar Munir</b>*, Syed Roshaan Ali Shah, Kartik Kuckreja, Fahad Shahbaz Khan, Paolo Fraccaro, Alexandre Lacoste, and Salman Khan.
                 </p>
                 <p style="font-family: 'Roboto Slab', serif; font-size: 16px; color: #2c3e50; margin: 5px 0;">
                     <strong>"GEOBench-VLM: Benchmarking Vision-Language Models for Geospatial Tasks"</strong>. 
