--- a/index.html
+++ b/index.html
@@ -345,6 +345,18 @@ title: Akhtar, CV & ML
             </li>
     </ul>
 
+<!-- Services & Honors Section -->
+<a id="services" class="anchor"></a>
+<h2 style="font-family: 'Roboto Slab', serif; font-size: 24px; color: #ffffff; margin-bottom: 15px;">Services & Honors</h2>
+<ul style="font-family: 'Lato', sans-serif; font-size: 16px; line-height: 1.6; color: #2c3e50; padding-left: 20px; list-style-type: disc;">
+    <li style="margin-bottom: 10px;"><strong>Reviewer:</strong> CVPR 2023-2025, ICLR 2024-2025, ICCV 2023-2025, NeurIPS 2023-2025</li>
+    <li style="margin-bottom: 10px;"><strong>Outstanding Reviewer:</strong> Recognized as Outstanding Reviewer for CVPR 2025</li>
+    <li style="margin-bottom: 10px;"><strong>Awardee:</strong> NeurIPS 2022 & 2023 Scholar Award, CVPR 2023 DEI Award</li>
+    <li style="margin-bottom: 10px;"><strong>Scholarship:</strong> PhD Fellowship, from Information Technology University</li>
+    <li style="margin-bottom: 10px;"><strong>Conferences (Attended):</strong> CVPR 2023, NeurIPS 2023, CVPR 2024, BMVC 2024</li>
+    <li style="margin-bottom: 10px;">Attended as participant in BMVC Doctoral Consortium</li>
+</ul>
+
     <!-- Experience Section -->
 <a id="experience" class="anchor"></a>
 <h2 style="font-family: 'Roboto Slab', serif; font-size: 24px; color: #ffffff; margin-bottom: 15px;">Experience</h2>
@@ -404,17 +416,6 @@ title: Akhtar, CV & ML
         </li>
     </ul>
 </div>
-
-
-<!-- Services & Honors Section -->
-<a id="services" class="anchor"></a>
-<h2 style="font-family: 'Roboto Slab', serif; font-size: 24px; color: #ffffff; margin-bottom: 15px;">Services & Honors</h2>
-<ul style="font-family: 'Lato', sans-serif; font-size: 16px; line-height: 1.6; color: #2c3e50; padding-left: 20px; list-style-type: disc;">
-    <li style="margin-bottom: 10px;"><strong>Reviewer:</strong> CVPR 2023-2025, ICLR 2024-2025, ICCV 2023-2025, NeurIPS 2023-2025</li>
-    <li style="margin-bottom: 10px;"><strong>Awardee:</strong> NeurIPS 2022 & 2023 Scholar Award, CVPR 2023 DEI Award</li>
-    <li style="margin-bottom: 10px;"><strong>Scholarship:</strong> PhD Fellowship, from Information Technology University</li>
-    <li style="margin-bottom: 10px;"><strong>Conferences (Attended):</strong> CVPR 2023, NeurIPS 2023, CVPR 2024, BMVC 2024</li>
-</ul>
 
 <!-- CV Section -->
 <a id="cv" class="anchor"></a>
