--- a/index.html
+++ b/index.html
@@ -53,12 +53,14 @@ title: Akhtar, CV & ML
       Currently, I am focused on tackling challenges in 
       <strong style="color: #1f78b4;">Model Calibration</strong>, 
       enhancing the accuracy of <strong style="color: #1f78b4;">Weather Modeling</strong>, 
-      and improving <strong style="color: #1f78b4;">Remote Sensing</strong> analysis through VLMs. 
-	    
-      Advisors: <a href="https://scholar.google.es/citations?user=M59O9lkAAAAJ" style="text-decoration: none; color: #1f78b4;">Dr. Salman Khan</a>, 
-                    <a href="https://scholar.google.com/citations?user=zvaeYnUAAAAJ&hl=en" style="text-decoration: none; color: #1f78b4;">Dr. Fahad S Khan</a>.
+      and improving <strong style="color: #1f78b4;">Remote Sensing</strong> analysis through VLMs.
     </p>
-    </div>
+    <p style="margin: 4px 0 0 0;">
+      Advisors: 
+      <a href="https://scholar.google.es/citations?user=M59O9lkAAAAJ" style="text-decoration: none; color: #1f78b4;">Dr. Salman Khan</a>, 
+      <a href="https://scholar.google.com/citations?user=zvaeYnUAAAAJ&hl=en" style="text-decoration: none; color: #1f78b4;">Dr. Fahad S Khan</a>.
+    </p>
+  </div>
 </div>
 </div>
 
