--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ title: Akhtar, CV & ML
                 <!-- Social Media Links with Icons -->
                 <ul class="social" style="list-style-type: none; padding-left: 0; display: flex; gap: 10px; margin: 10px 0;">
                     <li><a href="https://www.linkedin.com/in/muhammad-akhtar-munir-697b3976/" style="text-decoration: none; color: #0e76a8;"><i class="fab fa-linkedin" style="font-size: 18px;"></i> LinkedIn</a></li>
-                    <li><a href="https://twitter.com/akhtarTalks" style="text-decoration: none; color: #1DA1F2;"><i class="fab fa-twitter" style="font-size: 18px;"></i> Twitter</a></li>
+<!--                     <li><a href="https://twitter.com/akhtarTalks" style="text-decoration: none; color: #1DA1F2;"><i class="fab fa-twitter" style="font-size: 18px;"></i> Twitter</a></li> -->
                     <li><a href="https://scholar.google.com.pk/citations?user=sT-epZAAAAAJ&hl=en" style="text-decoration: none; color: #4285F4;"><i class="fas fa-graduation-cap" style="font-size: 18px;"></i> Google Scholar</a></li>
                     <li><a href="https://github.com/akhtarvision" style="text-decoration: none; color: #333;"><i class="fab fa-github" style="font-size: 18px;"></i> GitHub</a></li>
                 </ul>
@@ -92,6 +92,30 @@ title: Akhtar, CV & ML
             </div>
         </li>        
 	    <hr style="border: 0; border-top: 1px solid #d3d3d3; margin: 0 0 30px 0;">
+	    <!-- Publication Item 1 -->
+        <li style="display: flex; align-items: center; margin-bottom: 30px; font-family: 'Lato', sans-serif; font-size: 16px; line-height: 1.8; color: #2c3e50;">
+            <!-- Thumbnail -->
+            <div style="flex: 0 0 150px; margin-right: 20px; display: flex; align-items: center;">
+                <img src="thumb_terra.jpg" alt="ThinkGeo Thumbnail" style="width: 100%; height: auto; border-radius: 8px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);">
+            </div>
+        
+            <!-- Publication Details -->
+            <div style="flex: 1;">
+                <p style="font-family: 'Roboto Slab', serif; font-size: 16px; line-height: 1.8; color: #2c3e50; margin: 0;">
+                    Muhamad Sohail Danish, <b style="color: #1f78b4;">Muhammad Akhtar Munir</b>*, Syed Roshaan Ali Shah, Muhammad Haris Khan, Rao Muhammad Anwer, Jorma Laaksonen, Fahad Shahbaz Khan, Salman Khan.
+                </p>
+                <p style="font-family: 'Roboto Slab', serif; font-size: 16px; color: #2c3e50; margin: 5px 0;">
+                    <strong>"TerraFM: A Scalable Foundation Model for Unified Multisensor Earth Observation"</strong>. 
+<!--                     In <strong>arXiv (2025)</strong>. <i>*Equally contributing first authors.</i> -->
+                </p>
+                <p style="margin: 5px 0;">
+                    <a href="https://arxiv.org/abs/2506.06281" style="font-family: 'Lato', sans-serif; text-decoration: none; color: #3498db;">[Paper]</a> 
+                    <a href="https://github.com/mbzuai-oryx/TerraFM" style="font-family: 'Lato', sans-serif; text-decoration: none; color: #e74c3c;">[Code]</a>
+                </p>
+            </div>
+        </li>        
+	    <hr style="border: 0; border-top: 1px solid #d3d3d3; margin: 0 0 30px 0;">
+	
         <!-- Publication Item 1 -->
         <li style="display: flex; align-items: center; margin-bottom: 30px; font-family: 'Lato', sans-serif; font-size: 16px; line-height: 1.8; color: #2c3e50;">
             <!-- Thumbnail -->
