--- a/index.html
+++ b/index.html
@@ -447,6 +447,58 @@ title: Akhtar, CV & ML
     </ul>
 </div>
 
+ <!-- People Section -->
+<a id="people" class="anchor"></a>
+<h2 style="font-family: 'Roboto Slab', serif; font-size: 24px; color: #ffffff; margin-bottom: 15px;">People</h2>
+<div style="font-family: 'Lato', sans-serif; font-size: 16px; line-height: 1.6; color: #2c3e50;">
+    <p>Grateful for the chance to guide and collaborate with some brilliant minds in recent years. Here is a non-exhaustive list of students/early-career collaborators I have had the pleasure of supervising or working alongside.</p>
+
+    <div style="display: flex; flex-wrap: wrap; gap: 30px; margin-top: 20px;">
+        <!-- Person Card -->
+        <div style="width: 160px; text-align: center;">
+            <i class="fas fa-user-circle" style="font-size: 80px; color: #1f78b4;"></i>
+            <p style="margin: 10px 0 0 0; font-weight: bold; color: #1f78b4;">Muhammad Sohail Danish</p>
+            <p style="font-size: 14px;">Phd Student.</p>
+        </div>
+
+        <div style="width: 160px; text-align: center;">
+            <i class="fas fa-user-circle" style="font-size: 80px; color: #1f78b4;"></i>
+            <p style="margin: 10px 0 0 0; font-weight: bold; color: #1f78b4;">Akashah Shabbir</p>
+            <p style="font-size: 14px;">Phd Student.</p>
+        </div>
+
+        <div style="width: 160px; text-align: center;">
+            <i class="fas fa-user-circle" style="font-size: 80px; color: #1f78b4;"></i>
+            <p style="margin: 10px 0 0 0; font-weight: bold; color: #1f78b4;">Vishal</p>
+            <p style="font-size: 14px;">Ph.D. student.</p>
+        </div>
+
+        <div style="width: 160px; text-align: center;">
+            <i class="fas fa-user-circle" style="font-size: 80px; color: #1f78b4;"></i>
+            <p style="margin: 10px 0 0 0; font-weight: bold; color: #1f78b4;">Ashshak</p>
+            <p style="font-size: 14px;">Researcher.</p>
+        </div>
+
+        <div style="width: 160px; text-align: center;">
+            <i class="fas fa-user-circle" style="font-size: 80px; color: #1f78b4;"></i>
+            <p style="margin: 10px 0 0 0; font-weight: bold; color: #1f78b4;">Yohan</p>
+            <p style="font-size: 14px;">Researcher.</p>
+        </div>
+
+        <div style="width: 160px; text-align: center;">
+            <i class="fas fa-user-circle" style="font-size: 80px; color: #1f78b4;"></i>
+            <p style="margin: 10px 0 0 0; font-weight: bold; color: #1f78b4;">Syed Roshaan Ali Shah</p>
+            <p style="font-size: 14px;">M.S. student. Co-authored a paper with us.</p>
+        </div>
+
+	<div style="width: 160px; text-align: center;">
+            <i class="fas fa-user-circle" style="font-size: 80px; color: #1f78b4;"></i>
+            <p style="margin: 10px 0 0 0; font-weight: bold; color: #1f78b4;">Muhammad Umer Sheikh</p>
+            <p style="font-size: 14px;">Researcher.</p>
+        </div>
+    </div>
+</div>
+
 <!-- CV Section -->
 <a id="cv" class="anchor"></a>
 <h2 style="font-family: 'Roboto Slab', serif; font-size: 24px; color: #ffffff; margin-bottom: 10px;">Curriculum Vitae (CV)</h2>
